--- a/home.html
+++ b/home.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Flask Tutorial</title>
+    <link rel="stylesheet" href="src/css/style.css">
+    <title>Interfaz HRV</title>
   </head>
   <body>
-    <h1> My First Try Using Flask </h1>
-    <p> Flask is Fun </p>
+    <section id="principal">
+      <div class="menu-sup">
+        Barra superior
+      </div>
+      <div class="part_central">
+        <div class="grafica">grafica</div>   
+        <div class="info-lat">herramientas</div>
+      </div>
+      <div class="menu-inf">
+        Barra inferior
+      </div>
+    </section>
   </body>
 </html>
